# remote-control

./: .gitignore  .tabs  Cargo.toml  LICENSE  README.md  deploy.py  macos_minimize_windows.applescript  requirements.dev.txt  requirements.txt  start.bat  start.sh
src/: main.rs  server.rs  util.rs
