[package]
name = "remote_control"
version = "0.1.0"
authors = ["Liam Henrickson <liam.henrickson@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
hex = "0.4"
lazy_static = "1.4"
repng = "0.2"
rocket = "0.4.9"
sha2 = "0.8"
scrap = "0.5"
winapi = { version = "0.3", features = ["winuser", "powrprof"] }
