[package]
name = "remote_control"
version = "0.1.0"
authors = ["Liam Henrickson <liam.henrickson@gmail.com>"]
edition = "2021"

[features]
# Enabling this (via `cargo build --features no_term`) will run the program without the terminal.
no_term = []

[dependencies]
chrono = "0.4"
hex = "0.4"
screenshots = "0.8"
serde = { version = "1.0.201", features = ["derive"] }
sha2 = "0.10"
toml = "0.8.12"
winapi = { version = "0.3", features = ["powrprof", "winuser"] }
